Fixed overflow issue

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -98,13 +98,13 @@
 .project-short-desc {
   display: block;
   margin-block-start: 1em;
-  margin-block-end: 1em;
+  margin-block-end: 0.5em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
 
 .project-demo-button {
-  margin-top: 40px;
+  margin-top: 30px;
   margin-bottom: 1em;
   color: var(--clr-bg-dark);
   font-size: 18px;
